Compléter l’API utilisateur…
