# backend/src/routes/user.js
@@ -2,9 +2,13 @@ const express = require('express')
 const router = express.Router()
 const user = require('../controllers/user.js')
 
+router.use('/api', user.verifieTokenPresent)
+router.use('/api/users/:id', user.verifieAdmin)
+
 router.get('/api/users', user.getUsers)
-router.post('/api/users', user.newUser)
+router.post('/register', user.newUser)
 router.put('/api/users/:id', user.updateUser)
+router.put('/api/password', user.updatePassword)
 router.delete('/api/users/:id', user.deleteUser)
 router.post('/login', user.login)
 
